--- a/Forge.Web/Styles/_colors.scss
+++ b/Forge.Web/Styles/_colors.scss
@@ -22,7 +22,7 @@ $color-primary-20: mix($color-primary, white, 50%);
 $color-primary-10: mix($color-primary, white, 20%);
 
 // Secondary -------------------------------------------
-$color-secondary: #444;//#1088b6;//#31ae39; ////#bd4635;
+$color-secondary: #657f87;//#1088b6;//#31ae39; ////#bd4635;
 $color-secondary-90: mix($color-secondary, black, 30%);
 $color-secondary-80: mix($color-secondary, black, 50%);
 $color-secondary-70: mix($color-secondary, black, 80%);
