--- a/Forge.Web/Styles/Components/_designer.scss
+++ b/Forge.Web/Styles/Components/_designer.scss
@@ -19,7 +19,7 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
 }
 
 .designer__static{
-    padding-left: $size-nav-left-width;
+    padding-left: $size-nav-left-width + 44px;
 }
 
 
@@ -43,9 +43,7 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
     top: $size-nav-height;
     bottom: 0;
     left: 0;
-    width: $size-nav-left-width;
     padding-right: 5px;
-    background: $color-primary-10;
     border-right: 1px solid $color-primary-40;
     z-index: 10;
 
@@ -83,7 +81,7 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
             
 
             .designer__list-items{ 
-                @include translateX(-156px);
+                @include translateX(0);
             }
 
             .designer__list-actions{
@@ -147,10 +145,16 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
     // __List-Items
     // ---------------------------
     .designer__list-items{
+        position: fixed;
+        left: -155px;
         padding: 10px 0;
+        width: $size-nav-left-width;
+        background: $color-primary-10;
+        border-right: 1px solid $color-primary-40;
+        height: 100%;
         overflow-y: auto;
 
-        @include translateX(0);    
+        @include translateX(199px); 
         @include transition(transform, 0.3s);
     }
 
@@ -188,9 +192,6 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
 
         &.designer__list-item--unsaved{
             border-color: $color-action-30 !important;
-            .button {
-                &:before{ content: "* "; }
-            }
         }
 
         
@@ -226,6 +227,7 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
 }
 
 .designer__search{
+    padding:0 10px;
     input{
         width: 100%;
         margin-bottom: 10px;
