--- a/Forge.Web/Styles/site.css
+++ b/Forge.Web/Styles/site.css
@@ -53,14 +53,14 @@ table {
   top: 0;
   left: 0;
   right: 0;
-  background-color: #51666c;
-  background-image: repeating-linear-gradient(45deg, transparent, transparent 15px, rgba(30, 38, 41, 0.2) 15px, rgba(30, 38, 41, 0.2) 30px), linear-gradient(90deg, #334044, #748c93, #334044);
+  background-color: #35434a;
+  background-image: repeating-linear-gradient(45deg, transparent, transparent 15px, rgba(20, 25, 28, 0.2) 15px, rgba(20, 25, 28, 0.2) 30px), linear-gradient(90deg, #212a2e, #55656c, #212a2e);
   background-size: 200% 200%;
   -webkit-animation: bganimate 20s linear infinite;
   -moz-animation: bganimate 20s linear infinite;
   animation: bganimate 20s linear infinite;
   text-align: center;
-  border-bottom: 1px solid #657f87;
+  border-bottom: 1px solid #42545c;
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3); }
 
 @-webkit-keyframes bganimate {
@@ -114,13 +114,13 @@ table {
 
 .emphasis {
   font-weight: 700;
-  color: #657f87; }
+  color: #42545c; }
 
 .list .list__item button {
   text-align: left; }
 
 .section--secondary {
-  background-color: #51666c;
+  background-color: #35434a;
   background-image: url(../Content/Images/cubes.png); }
 
 .section--summary {
@@ -128,7 +128,7 @@ table {
   color: #f8f8f8; }
   .section--summary h1 {
     color: white;
-    text-shadow: 2px 2px #51666c; }
+    text-shadow: 2px 2px #35434a; }
 
 .no-results {
   text-align: center;
@@ -147,8 +147,8 @@ table {
   .panel.panel--centered {
     text-align: center; }
   .panel.panel--clickable:hover {
-    background: #d1d9db;
-    border-color: #5b727a; }
+    background: #c6ccce;
+    border-color: #3b4c53; }
   .panel h4 {
     margin: -10px;
     margin-bottom: 20px;
@@ -208,9 +208,10 @@ b {
   margin-left: 5px; }
 
 ::-webkit-scrollbar {
-  width: 12px; }
+  width: 10px; }
 
 ::-webkit-scrollbar-thumb {
+  border-radius: 10px;
   background-color: #b1b1b1; }
 
 .icon:after {
@@ -251,8 +252,8 @@ b {
   height: 55px;
   z-index: 1000;
   font-size: 14px;
-  background-color: #657f87;
-  border-bottom: 1px solid #748c93;
+  background-color: #42545c;
+  border-bottom: 1px solid #55656c;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); }
@@ -322,10 +323,10 @@ b {
           width: 100%;
           line-height: 1;
           padding: 0 15px;
-          color: #657f87;
+          color: #42545c;
           font-weight: 600; }
           #nav .nav-group ul li a:hover {
-            color: #5b727a; }
+            color: #3b4c53; }
 
 @media (min-width: 720px) {
   nav {
@@ -433,7 +434,7 @@ b {
   padding: 10px;
   font-size: 12px; }
   .message.warning {
-    background-color: #b2bfc3; }
+    background-color: #a1aaae; }
   .message.information {
     background-color: #f8f8f8; }
 
@@ -450,28 +451,28 @@ button,
   min-width: 75px;
   overflow: hidden;
   color: #f8f8f8;
-  background: #51666c;
-  background-image: -moz-linear-gradient(top, #657f87 0, #5b727a 100%);
-  background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #657f87), color-stop(100%, #5b727a));
-  background-image: -webkit-linear-gradient(top, #657f87 0, #5b727a 100%);
-  background-image: -o-linear-gradient(top, #657f87 0, #5b727a 100%);
-  background-image: -ms-linear-gradient(top, #657f87 0, #5b727a 100%);
-  background-image: linear-gradient(to bottombottom, #657f87 0, #5b727a 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#657f87', endColorstr='#5b727a',GradientType=0 );
+  background: #35434a;
+  background-image: -moz-linear-gradient(top, #42545c 0, #3b4c53 100%);
+  background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #42545c), color-stop(100%, #3b4c53));
+  background-image: -webkit-linear-gradient(top, #42545c 0, #3b4c53 100%);
+  background-image: -o-linear-gradient(top, #42545c 0, #3b4c53 100%);
+  background-image: -ms-linear-gradient(top, #42545c 0, #3b4c53 100%);
+  background-image: linear-gradient(to bottombottom, #42545c 0, #3b4c53 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#42545c', endColorstr='#3b4c53',GradientType=0 );
   border: none;
   border-radius: 3px; }
   button:hover,
   .button:hover {
-    background-image: -moz-linear-gradient(top, #84999f 0, #5b727a 100%);
-    background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #84999f), color-stop(100%, #5b727a));
-    background-image: -webkit-linear-gradient(top, #84999f 0, #5b727a 100%);
-    background-image: -o-linear-gradient(top, #84999f 0, #5b727a 100%);
-    background-image: -ms-linear-gradient(top, #84999f 0, #5b727a 100%);
-    background-image: linear-gradient(to bottombottom, #84999f 0, #5b727a 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#84999f', endColorstr='#5b727a',GradientType=0 ); }
+    background-image: -moz-linear-gradient(top, #68767d 0, #3b4c53 100%);
+    background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #68767d), color-stop(100%, #3b4c53));
+    background-image: -webkit-linear-gradient(top, #68767d 0, #3b4c53 100%);
+    background-image: -o-linear-gradient(top, #68767d 0, #3b4c53 100%);
+    background-image: -ms-linear-gradient(top, #68767d 0, #3b4c53 100%);
+    background-image: linear-gradient(to bottombottom, #68767d 0, #3b4c53 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#68767d', endColorstr='#3b4c53',GradientType=0 ); }
   button:active,
   .button:active {
-    background: #51666c; }
+    background: #35434a; }
   button + button,
   .button + button {
     margin-left: 5px; }
@@ -536,7 +537,7 @@ button,
   .button .button__clicky {
     position: absolute;
     display: inline-block;
-    background: rgba(178, 191, 195, 0.7);
+    background: rgba(161, 170, 174, 0.7);
     border-radius: 100%;
     transform: scale(0); }
   button.button--animate .button__clicky,
@@ -793,7 +794,7 @@ h5 {
   position: relative; }
 
 .designer__static {
-  padding-left: 200px; }
+  padding-left: 244px; }
 
 .designer__views {
   position: relative;
@@ -813,9 +814,7 @@ h5 {
   top: 55px;
   bottom: 0;
   left: 0;
-  width: 200px;
   padding-right: 5px;
-  background: #f8f8f8;
   border-right: 1px solid #e0e0e0;
   z-index: 10;
   overflow: visible; }
@@ -840,11 +839,11 @@ h5 {
       .designer__list.designer__list--closed ~ .designer__overlay {
         display: none; }
       .designer__list.designer__list--closed .designer__list-items {
-        -moz-transform: translateX(-156px);
-        -ms-transform: translateX(-156px);
-        -o-transform: translateX(-156px);
-        -webkit-transform: translateX(-156px);
-        transform: translateX(-156px); }
+        -moz-transform: translateX(0);
+        -ms-transform: translateX(0);
+        -o-transform: translateX(0);
+        -webkit-transform: translateX(0);
+        transform: translateX(0); }
       .designer__list.designer__list--closed .designer__list-actions {
         align-self: flex-end; }
       .designer__list.designer__list--closed .designer__list-actions,
@@ -887,13 +886,19 @@ h5 {
   .designer__list .designer__list-items {
     padding-right: 5px; }
   .designer__list .designer__list-items {
+    position: fixed;
+    left: -155px;
     padding: 10px 0;
+    width: 200px;
+    background: #f8f8f8;
+    border-right: 1px solid #e0e0e0;
+    height: 100%;
     overflow-y: auto;
-    -moz-transform: translateX(0);
-    -ms-transform: translateX(0);
-    -o-transform: translateX(0);
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
+    -moz-transform: translateX(199px);
+    -ms-transform: translateX(199px);
+    -o-transform: translateX(199px);
+    -webkit-transform: translateX(199px);
+    transform: translateX(199px);
     -moz-transition: transform 0.3s ease-in-out;
     -o-transition: transform 0.3s ease-in-out;
     -webkit-transition: opacity 0.3s ease-in-out;
@@ -917,10 +922,8 @@ h5 {
       margin-right: 5px; }
     .designer__list .designer__list-item.designer__list-item--unsaved {
       border-color: #e5c066 !important; }
-      .designer__list .designer__list-item.designer__list-item--unsaved .button:before {
-        content: "* "; }
     .designer__list .designer__list-item.designer__list-item--selected {
-      border-color: #84999f !important;
+      border-color: #68767d !important;
       /*&:after{
                 position: absolute;
                 top: 0;
@@ -929,16 +932,18 @@ h5 {
                 @include arrow-right(20px, $bg-list-item--active);
             }*/ }
       .designer__list .designer__list-item.designer__list-item--selected .button {
-        color: #657f87 !important; }
+        color: #42545c !important; }
 
 .designer__list-header {
   font-weight: 600;
   padding: 10px;
   padding-left: 0; }
 
-.designer__search input {
-  width: 100%;
-  margin-bottom: 10px; }
+.designer__search {
+  padding: 0 10px; }
+  .designer__search input {
+    width: 100%;
+    margin-bottom: 10px; }
 
 .designer__tiles {
   display: flex;
