--- a/Forge.Web/Styles/site.scss
+++ b/Forge.Web/Styles/site.scss
@@ -73,12 +73,12 @@ b { font-weight: 600; }
 
 ::-webkit-scrollbar
 {
-	width: 12px;
+	width: 10px;
 }
 
 ::-webkit-scrollbar-thumb
 {
-	//border-radius: 10px;
+	border-radius: 10px;
 	background-color: $color-primary-70;
     //&:hover{ background-color: $color-p-20; }
 }
