--- a/Forge.Web/Styles/_colors.scss
+++ b/Forge.Web/Styles/_colors.scss
@@ -22,7 +22,7 @@ $color-primary-20: mix($color-primary, white, 50%);
 $color-primary-10: mix($color-primary, white, 20%);
 
 // Secondary -------------------------------------------
-$color-secondary: #42545c;//#1088b6;//#31ae39; ////#bd4635;
+$color-secondary: #4a5355;//#1088b6;//#31ae39; ////#bd4635;
 $color-secondary-90: mix($color-secondary, black, 30%);
 $color-secondary-80: mix($color-secondary, black, 50%);
 $color-secondary-70: mix($color-secondary, black, 80%);
@@ -34,7 +34,7 @@ $color-secondary-20: mix($color-secondary, white, 50%);
 $color-secondary-10: mix($color-secondary, white, 30%);
 
 // Tertiary -------------------------------------------
-$color-tertiary: #7DAE31;
+$color-tertiary: #87AB9D;
 $color-tertiary-90: mix($color-tertiary, black, 30%);
 $color-tertiary-80: mix($color-tertiary, black, 50%);
 $color-tertiary-70: mix($color-tertiary, black, 80%);
@@ -46,7 +46,7 @@ $color-tertiary-20: mix($color-tertiary, white, 50%);
 $color-tertiary-10: mix($color-tertiary, white, 30%);
 
 // Action -------------------------------------------
-$color-action: #deb040;
+$color-action: #F7E4B7;
 $color-action-90: mix($color-action, black, 45%);
 $color-action-80: mix($color-action, black, 50%);
 $color-action-70: mix($color-action, black, 80%);
@@ -58,7 +58,7 @@ $color-action-20: mix($color-action, white, 50%);
 $color-action-10: mix($color-action, white, 30%);
 
 // Link -------------------------------------------
-$color-link: #1088b6;
+$color-link: #7CA1A8;
 $color-link-90: mix($color-link, black, 45%);
 $color-link-80: mix($color-link, black, 50%);
 $color-link-70: mix($color-link, black, 80%);
