--- a/Forge.Web/Styles/_helpers.scss
+++ b/Forge.Web/Styles/_helpers.scss
@@ -56,8 +56,9 @@
 }
 
 .section--secondary{
-    background-color: $color-secondary-70;
+    background-color: $color-secondary-60;
     background-image: url(../Content/Images/cubes.png);
+    //@include linear-gradient-vertical-2($color-secondary-60, 0,$color-link-80, 100%);    
 }
 
 .section--summary{
