--- a/Forge.Web/Styles/site.css
+++ b/Forge.Web/Styles/site.css
@@ -53,14 +53,14 @@ table {
   top: 0;
   left: 0;
   right: 0;
-  background-color: #35434a;
-  background-image: repeating-linear-gradient(45deg, transparent, transparent 15px, rgba(20, 25, 28, 0.2) 15px, rgba(20, 25, 28, 0.2) 30px), linear-gradient(90deg, #212a2e, #55656c, #212a2e);
+  background-color: #3b4244;
+  background-image: repeating-linear-gradient(45deg, transparent, transparent 15px, rgba(22, 25, 26, 0.2) 15px, rgba(22, 25, 26, 0.2) 30px), linear-gradient(90deg, #252a2b, #5c6466, #252a2b);
   background-size: 200% 200%;
   -webkit-animation: bganimate 20s linear infinite;
   -moz-animation: bganimate 20s linear infinite;
   animation: bganimate 20s linear infinite;
   text-align: center;
-  border-bottom: 1px solid #42545c;
+  border-bottom: 1px solid #4a5355;
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3); }
 
 @-webkit-keyframes bganimate {
@@ -114,13 +114,13 @@ table {
 
 .emphasis {
   font-weight: 700;
-  color: #42545c; }
+  color: #4a5355; }
 
 .list .list__item button {
   text-align: left; }
 
 .section--secondary {
-  background-color: #35434a;
+  background-color: #434b4d;
   background-image: url(../Content/Images/cubes.png); }
 
 .section--summary {
@@ -128,7 +128,7 @@ table {
   color: #f8f8f8; }
   .section--summary h1 {
     color: white;
-    text-shadow: 2px 2px #35434a; }
+    text-shadow: 2px 2px #3b4244; }
 
 .no-results {
   text-align: center;
@@ -147,8 +147,8 @@ table {
   .panel.panel--centered {
     text-align: center; }
   .panel.panel--clickable:hover {
-    background: #c6ccce;
-    border-color: #3b4c53; }
+    background: #c9cbcc;
+    border-color: #434b4d; }
   .panel h4 {
     margin: -10px;
     margin-bottom: 20px;
@@ -173,9 +173,7 @@ html {
   html body {
     position: relative;
     padding-top: 55px;
-    background-color: #eeeeee;
-    background-color: #eee;
-    background-image: url(../Content/Images/cubes_dark.png); }
+    background-color: #f8f8f8; }
 
 html, body {
   height: 100%; }
@@ -194,11 +192,11 @@ a {
   text-decoration: none;
   font-size: 14px;
   cursor: pointer;
-  color: #1088b6; }
+  color: #7CA1A8; }
   a:visited, a:active, a:link {
-    color: #1088b6; }
+    color: #7CA1A8; }
   a:hover {
-    color: #0e7aa4; }
+    color: #709197; }
 
 b {
   font-weight: 600; }
@@ -211,8 +209,7 @@ b {
   width: 10px; }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: #b1b1b1; }
+  background-color: #e4e4e4; }
 
 .icon:after {
   /*display: inline-block;
@@ -252,8 +249,8 @@ b {
   height: 55px;
   z-index: 1000;
   font-size: 14px;
-  background-color: #42545c;
-  border-bottom: 1px solid #55656c;
+  background-color: #4a5355;
+  border-bottom: 1px solid #5c6466;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); }
@@ -271,6 +268,8 @@ b {
       text-align: right; }
       #nav .nav-group#nav-account .arrow {
         right: 30px; }
+      #nav .nav-group#nav-account ul {
+        right: 0; }
     #nav .nav-group .toggle {
       font-family: "Linearicons-Free";
       display: inline-block;
@@ -285,7 +284,7 @@ b {
       background: none;
       border: none; }
       #nav .nav-group .toggle:hover, #nav .nav-group .toggle.t-open {
-        color: #f8f8f8; }
+        color: white; }
       #nav .nav-group .toggle.nav__menu {
         float: left; }
         #nav .nav-group .toggle.nav__menu:after {
@@ -299,8 +298,8 @@ b {
       display: none;
       width: 100%;
       white-space: nowrap;
-      background-color: #f8f8f8;
-      top: 50px; }
+      background-color: #96b4b9;
+      top: 55px; }
       #nav .nav-group ul.open {
         display: block; }
       #nav .nav-group ul .arrow {
@@ -310,23 +309,24 @@ b {
         height: 0;
         border-left: 8px solid transparent;
         border-right: 8px solid transparent;
-        border-bottom: 8px solid #f8f8f8; }
+        border-bottom: 8px solid #96b4b9; }
       #nav .nav-group ul li {
         display: block;
         height: 40px;
         line-height: 40px;
         width: 100%;
-        border-bottom: 1px solid #e4e4e4; }
+        border-bottom: 1px solid #bed0d4; }
+        #nav .nav-group ul li:last-child {
+          border: none; }
         #nav .nav-group ul li a {
           display: inline-block;
           height: 100%;
           width: 100%;
           line-height: 1;
           padding: 0 15px;
-          color: #42545c;
-          font-weight: 600; }
+          color: #d8e3e5; }
           #nav .nav-group ul li a:hover {
-            color: #3b4c53; }
+            color: white; }
 
 @media (min-width: 720px) {
   nav {
@@ -434,7 +434,7 @@ b {
   padding: 10px;
   font-size: 12px; }
   .message.warning {
-    background-color: #a1aaae; }
+    background-color: #a5a9aa; }
   .message.information {
     background-color: #f8f8f8; }
 
@@ -451,28 +451,27 @@ button,
   min-width: 75px;
   overflow: hidden;
   color: #f8f8f8;
-  background: #35434a;
-  background-image: -moz-linear-gradient(top, #42545c 0, #3b4c53 100%);
-  background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #42545c), color-stop(100%, #3b4c53));
-  background-image: -webkit-linear-gradient(top, #42545c 0, #3b4c53 100%);
-  background-image: -o-linear-gradient(top, #42545c 0, #3b4c53 100%);
-  background-image: -ms-linear-gradient(top, #42545c 0, #3b4c53 100%);
-  background-image: linear-gradient(to bottombottom, #42545c 0, #3b4c53 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#42545c', endColorstr='#3b4c53',GradientType=0 );
-  border: none;
-  border-radius: 3px; }
+  background: #3b4244;
+  background-image: -moz-linear-gradient(top, #4a5355 0, #434b4d 100%);
+  background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #4a5355), color-stop(100%, #434b4d));
+  background-image: -webkit-linear-gradient(top, #4a5355 0, #434b4d 100%);
+  background-image: -o-linear-gradient(top, #4a5355 0, #434b4d 100%);
+  background-image: -ms-linear-gradient(top, #4a5355 0, #434b4d 100%);
+  background-image: linear-gradient(to bottombottom, #4a5355 0, #434b4d 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a5355', endColorstr='#434b4d',GradientType=0 );
+  border: none; }
   button:hover,
   .button:hover {
-    background-image: -moz-linear-gradient(top, #68767d 0, #3b4c53 100%);
-    background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #68767d), color-stop(100%, #3b4c53));
-    background-image: -webkit-linear-gradient(top, #68767d 0, #3b4c53 100%);
-    background-image: -o-linear-gradient(top, #68767d 0, #3b4c53 100%);
-    background-image: -ms-linear-gradient(top, #68767d 0, #3b4c53 100%);
-    background-image: linear-gradient(to bottombottom, #68767d 0, #3b4c53 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#68767d', endColorstr='#3b4c53',GradientType=0 ); }
+    background-image: -moz-linear-gradient(top, #6e7577 0, #434b4d 100%);
+    background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #6e7577), color-stop(100%, #434b4d));
+    background-image: -webkit-linear-gradient(top, #6e7577 0, #434b4d 100%);
+    background-image: -o-linear-gradient(top, #6e7577 0, #434b4d 100%);
+    background-image: -ms-linear-gradient(top, #6e7577 0, #434b4d 100%);
+    background-image: linear-gradient(to bottombottom, #6e7577 0, #434b4d 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6e7577', endColorstr='#434b4d',GradientType=0 ); }
   button:active,
   .button:active {
-    background: #35434a; }
+    background: #3b4244; }
   button + button,
   .button + button {
     margin-left: 5px; }
@@ -484,30 +483,30 @@ button,
       background: #909090; }
   button.button--tertiary,
   .button.button--tertiary {
-    background: #97be5a;
-    background-image: -moz-linear-gradient(top, #7DAE31 0, #719d2c 100%);
-    background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #7DAE31), color-stop(100%, #719d2c));
-    background-image: -webkit-linear-gradient(top, #7DAE31 0, #719d2c 100%);
-    background-image: -o-linear-gradient(top, #7DAE31 0, #719d2c 100%);
-    background-image: -ms-linear-gradient(top, #7DAE31 0, #719d2c 100%);
-    background-image: linear-gradient(to bottombottom, #7DAE31 0, #719d2c 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7DAE31', endColorstr='#719d2c',GradientType=0 ); }
+    background: #9fbcb1;
+    background-image: -moz-linear-gradient(top, #87AB9D 0, #7a9a8d 100%);
+    background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #87AB9D), color-stop(100%, #7a9a8d));
+    background-image: -webkit-linear-gradient(top, #87AB9D 0, #7a9a8d 100%);
+    background-image: -o-linear-gradient(top, #87AB9D 0, #7a9a8d 100%);
+    background-image: -ms-linear-gradient(top, #87AB9D 0, #7a9a8d 100%);
+    background-image: linear-gradient(to bottombottom, #87AB9D 0, #7a9a8d 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#87AB9D', endColorstr='#7a9a8d',GradientType=0 ); }
     button.button--tertiary:hover,
     .button.button--tertiary:hover {
-      background: #7DAE31;
-      background-image: -moz-linear-gradient(top, #8ab646 0, #719d2c 100%);
-      background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #8ab646), color-stop(100%, #719d2c));
-      background-image: -webkit-linear-gradient(top, #8ab646 0, #719d2c 100%);
-      background-image: -o-linear-gradient(top, #8ab646 0, #719d2c 100%);
-      background-image: -ms-linear-gradient(top, #8ab646 0, #719d2c 100%);
-      background-image: linear-gradient(to bottombottom, #8ab646 0, #719d2c 100%);
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8ab646', endColorstr='#719d2c',GradientType=0 ); }
+      background: #87AB9D;
+      background-image: -moz-linear-gradient(top, #93b3a7 0, #7a9a8d 100%);
+      background-image: -webkit-gradient(linear, left top, left bottombottom, color-stop(0, #93b3a7), color-stop(100%, #7a9a8d));
+      background-image: -webkit-linear-gradient(top, #93b3a7 0, #7a9a8d 100%);
+      background-image: -o-linear-gradient(top, #93b3a7 0, #7a9a8d 100%);
+      background-image: -ms-linear-gradient(top, #93b3a7 0, #7a9a8d 100%);
+      background-image: linear-gradient(to bottombottom, #93b3a7 0, #7a9a8d 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93b3a7', endColorstr='#7a9a8d',GradientType=0 ); }
   button.button--action,
   .button.button--action {
-    background: #e5c066; }
+    background: #f9e9c5; }
     button.button--action:hover,
     .button.button--action:hover {
-      background: #e1b853; }
+      background: #f8e7be; }
   button.button--transparent,
   .button.button--transparent {
     color: #b1b1b1;
@@ -518,15 +517,15 @@ button,
   button.button--link,
   .button.button--link {
     background: none;
-    color: #1088b6; }
+    color: #709197; }
     button.button--link:visited, button.button--link:active, button.button--link:link,
     .button.button--link:visited,
     .button.button--link:active,
     .button.button--link:link {
-      color: #1088b6; }
+      color: #709197; }
     button.button--link:hover,
     .button.button--link:hover {
-      color: #0e7aa4; }
+      color: #3e5154; }
   button:disabled, button[disabled],
   .button:disabled,
   .button[disabled] {
@@ -537,7 +536,7 @@ button,
   .button .button__clicky {
     position: absolute;
     display: inline-block;
-    background: rgba(161, 170, 174, 0.7);
+    background: rgba(150, 180, 185, 0.7);
     border-radius: 100%;
     transform: scale(0); }
   button.button--animate .button__clicky,
@@ -585,10 +584,11 @@ h5 {
   display: inline-block;
   margin-right: 1px;
   background: none;
-  color: rgba(255, 255, 255, 0.7);
+  color: #c9cbcc;
   border: none;
   outline: none;
   user-select: none;
+  text-shadow: 1px 1px rgba(37, 42, 43, 0.5);
   font-size: 16px; }
   .tab label {
     position: relative;
@@ -600,7 +600,7 @@ h5 {
     position: absolute;
     left: -99999px; }
     .tab input:checked + label {
-      color: #6f6f6f;
+      color: #434b4d;
       background: white;
       text-shadow: none; }
   .tab:hover label {
@@ -695,14 +695,14 @@ h5 {
     .stage__workspace .definition__setting .definition__setting-remove:hover {
       color: #cc4949; }
   .stage__workspace .definition__tag--active {
-    background-color: #f5e7c6 !important;
-    color: #b28d33 !important; }
+    background-color: #fdf7e9 !important;
+    color: #c6b692 !important; }
   .stage__workspace .definition__setting--active,
   .stage__workspace .definition__nested-rule--active {
     transition: background-color 0.3s ease-in-out; }
     .stage__workspace .definition__setting--active .field__label,
     .stage__workspace .definition__nested-rule--active .field__label {
-      color: #c89e3a; }
+      color: #decda5; }
   .stage__workspace .expandable__header {
     position: relative; }
   .stage__workspace .expandable__button {
@@ -753,11 +753,11 @@ h5 {
   .stage__menu .stage__save:before {
     content: ""; }
   .stage__menu .stage__save:hover {
-    color: #8ab646; }
+    color: #93b3a7; }
   .stage__menu .stage__save-all:before {
     content: ""; }
   .stage__menu .stage__save-all:hover {
-    color: #7DAE31; }
+    color: #87AB9D; }
   .stage__menu .stage__delete:before {
     content: ""; }
   .stage__menu .stage__delete:hover {
@@ -795,6 +795,9 @@ h5 {
 
 .designer__static {
   padding-left: 244px; }
+  @media screen and (max-width: 720px) {
+    .designer__static {
+      padding-left: 44px; } }
 
 .designer__views {
   position: relative;
@@ -809,35 +812,20 @@ h5 {
   z-index: 9; }
 
 .designer__list {
-  position: fixed;
-  vertical-align: top;
-  top: 55px;
-  bottom: 0;
-  left: 0;
-  padding-right: 5px;
-  border-right: 1px solid #e0e0e0;
-  z-index: 10;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
   overflow: visible; }
   @media screen and (max-width: 720px) {
     .designer__list ~ .designer__overlay {
       display: block; }
     .designer__list ~ .designer__static {
       padding-left: 44px; } }
-  .designer__list h3 {
-    border-top-left-radius: 3px; }
   .designer__list.designer__list--empty {
     display: none; }
-    .designer__list.designer__list--empty .designer__list-actions {
-      display: none; }
-    .designer__list.designer__list--empty ~ .designer__static {
-      padding-left: 0 !important; }
   .designer__list.designer__list--closed {
     padding-right: 0; }
     @media screen and (max-width: 720px) {
-      .designer__list.designer__list--closed ~ .designer__static {
-        padding-left: 44px; }
-      .designer__list.designer__list--closed ~ .designer__overlay {
-        display: none; }
       .designer__list.designer__list--closed .designer__list-items {
         -moz-transform: translateX(0);
         -ms-transform: translateX(0);
@@ -845,16 +833,10 @@ h5 {
         -webkit-transform: translateX(0);
         transform: translateX(0); }
       .designer__list.designer__list--closed .designer__list-actions {
-        align-self: flex-end; }
-      .designer__list.designer__list--closed .designer__list-actions,
-      .designer__list.designer__list--closed .designer__list-items {
-        padding-right: 0;
-        margin: 0; } }
+        align-self: flex-end; } }
   .designer__list .designer__list-actions {
-    position: fixed;
     width: 44px;
-    height: 100%;
-    margin-right: 5px;
+    height: calc(100vh - 148px);
     background: white;
     border-right: 1px solid #e0e0e0;
     z-index: 10; }
@@ -873,26 +855,23 @@ h5 {
         width: 44px;
         background: transparent;
         margin-bottom: -2px;
-        color: #b1b1b1; }
+        color: #c7c7c7; }
         .designer__list .designer__list-actions .designer__mini-buttons button:after {
           float: none; }
         .designer__list .designer__list-actions .designer__mini-buttons button:hover {
           color: #6f6f6f; }
         .designer__list .designer__list-actions .designer__mini-buttons button.button--active {
-          color: #6f6f6f; }
+          color: #424242; }
           .designer__list .designer__list-actions .designer__mini-buttons button.button--active:after {
             text-shadow: none; }
-  .designer__list .designer__list-actions,
   .designer__list .designer__list-items {
-    padding-right: 5px; }
-  .designer__list .designer__list-items {
-    position: fixed;
-    left: -155px;
-    padding: 10px 0;
-    width: 200px;
-    background: #f8f8f8;
-    border-right: 1px solid #e0e0e0;
+    position: absolute;
+    left: -156px;
     height: 100%;
+    padding: 10px 0 30px 0;
+    width: 200px;
+    background: white;
+    border-right: 1px solid #e0e0e0;
     overflow-y: auto;
     -moz-transform: translateX(199px);
     -ms-transform: translateX(199px);
@@ -906,7 +885,6 @@ h5 {
   .designer__list .designer__list-item {
     border-left: 5px solid transparent; }
     .designer__list .designer__list-item button {
-      display: block;
       width: 100%;
       text-align: left;
       height: 30px;
@@ -921,18 +899,13 @@ h5 {
       content: "\f375";
       margin-right: 5px; }
     .designer__list .designer__list-item.designer__list-item--unsaved {
-      border-color: #e5c066 !important; }
+      border-color: #f9e9c5 !important;
+      background: #fdf7e9; }
     .designer__list .designer__list-item.designer__list-item--selected {
-      border-color: #68767d !important;
-      /*&:after{
-                position: absolute;
-                top: 0;
-                right: -20px;
-                content: "";
-                @include arrow-right(20px, $bg-list-item--active);
-            }*/ }
+      border-color: #e0e0e0 !important;
+      background: #eeeeee; }
       .designer__list .designer__list-item.designer__list-item--selected .button {
-        color: #42545c !important; }
+        color: #6f6f6f !important; }
 
 .designer__list-header {
   font-weight: 600;
@@ -1045,8 +1018,8 @@ select {
     border-color: #6f6f6f; }
   input:focus, .input:focus,
   select:focus {
-    border-color: #deb040;
-    box-shadow: #e1b853 0 0 8px 0;
+    border-color: #decda5;
+    box-shadow: #F7E4B7 0 0 8px 0;
     outline: none; }
 
 input {
@@ -1134,7 +1107,7 @@ input {
   text-align: center;
   background: white; }
   .sortable .sortable__handle:hover {
-    color: #e1b853; }
+    color: #f8e7be; }
   .sortable .sortable__handle:after {
     font-family: "Ionicons";
     font-size: 22px;
@@ -1144,9 +1117,9 @@ input {
   opacity: 0.5; }
 
 .sortable.sortable--dragging .sortable__slot:hover, .sortable.sortable--dragging .sortable__slot.sortable__slot--active {
-  background: #f5e7c6;
+  background: #fdf7e9;
   height: 35px;
-  border: 1px solid #e5c066; }
+  border: 1px solid #f9e9c5; }
   .sortable.sortable--dragging .sortable__slot:hover + .sortable__item, .sortable.sortable--dragging .sortable__slot.sortable__slot--active + .sortable__item {
     border-top: none; }
 
@@ -1317,6 +1290,9 @@ input {
       transform: translateY(-10px); }
     .shrinky.shrinky--shrink .tab {
       font-size: 14px; }
+
+.shrinky__stick {
+  position: relative; }
 
 .dictionary {
   display: table;
